--- a/nobicom.html
+++ b/nobicom.html
@@ -46,7 +46,7 @@
     <div class="container">
 
       <div class="pull-left">
-        <a href="../Symposium18/TechKranthi.html" ><div class="KR2">TECHKRANTHI 2K18</div></a>
+        <a href="../Symposium18/index.html" ><div class="KR2">TECHKRANTHI 2K18</div></a>
       </div>
 		
       <nav id="nav-menu-container">
