--- a/mechsym.html
+++ b/mechsym.html
@@ -47,7 +47,7 @@ background-color:white;
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="../Symposium18/TechKranthi.html">Techkranthi 2k18</a>
+        <a class="navbar-brand js-scroll-trigger" href="../Symposium18/index.html">Techkranthi 2k18</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
