--- a/vyuha.html
+++ b/vyuha.html
@@ -33,7 +33,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="../Symposium18/TechKranthi.html"><span class="elect">TechKranthi '18</span></a>
+        <a class="navbar-brand js-scroll-trigger" href="../Symposium18/index.html"><span class="elect">TechKranthi '18</span></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
