--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ document.getElementById("demo4").innerHTML = seconds + "s ";
           <h3 class="text-success mb-0">Department wise</h3>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="../Symposium18/csit.html">
+            <a class="portfolio-item" href="../csit.html">
               <span class="caption">
                 <span class="caption-content">
                   <h1 class="display-1"><strong>Prayudh</strong></h1>
@@ -234,7 +234,7 @@ document.getElementById("demo4").innerHTML = seconds + "s ";
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="../Symposium18/mechsym.html">
+            <a class="portfolio-item" href="../mechsym.html">
               <span class="caption">
                 <span class="caption-content">
                   <h1 class="display-1"><strong>MechRevz</strong></h1>
@@ -245,7 +245,7 @@ document.getElementById("demo4").innerHTML = seconds + "s ";
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="../Symposium18/nobicom.html">
+            <a class="portfolio-item" href="../nobicom.html">
               <span class="caption">
                 <span class="caption-content">
                  <h1 class="display-1"><strong>NobiCom</strong></h1>
@@ -255,7 +255,7 @@ document.getElementById("demo4").innerHTML = seconds + "s ";
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="../Symposium18/vyuha.html">
+            <a class="portfolio-item" href="../vyuha.html">
               <span class="caption">
                 <span class="caption-content">
                  <h1 class="display-1"><strong>Vyuha</strong></h1>
