--- a/csit.html
+++ b/csit.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-warning js-scroll-trigger" href="../Symposium18/index.html" style="font-size:3rem;  font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;">techKranthi</a>
+        <a class="navbar-brand text-warning js-scroll-trigger" href="../index.html" style="font-size:3rem;  font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;">techKranthi</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
