fix2 plus email

--- a/mechsym.html
+++ b/mechsym.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="icon" href="../Symposium18/img/mechi.png">
+	<link rel="icon" href="../img/mechi.png">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -47,7 +47,7 @@ background-color:white;
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="../Symposium18/index.html">Techkranthi 2k18</a>
+        <a class="navbar-brand js-scroll-trigger" href="../index.html">Techkranthi 2k18</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -133,6 +133,7 @@ background-color:white;
 				  <li>Title for Paper Presentation is <b>EMERGING TREND IN MECHANICAL ENGINEERING</b>.</li>
 				  <li>Atleast one of the members of the selected paper should acknowledge the receipt of information that the paper has been selected for the final presentation via <b>e-mail</b> on or before <b>14/02/18</b> and present the paper on <b>21/02/18</b>.</li>
 				  <li>Teams will be provided with <b>7 minutes </b>for presentation which will be followed by <b>3 minutes </b>for Q&A session.</li>
+				   <li>Abstracts must be submitted prior to the event. Email yours to <code>mechrevz@gmail.com</code></li>
 				  
 			   </ol>
 			  </p>
