--- a/nobicom.html
+++ b/nobicom.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
 
   <link href="favicon.ico" rel="shortcut icon">
-  <link rel="icon" href="../Symposium18/img/sig.png">
+  <link rel="icon" href="../img/sig.png">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
@@ -46,7 +46,7 @@
     <div class="container">
 
       <div class="pull-left">
-        <a href="../Symposium18/index.html" ><div class="KR2">TECHKRANTHI 2K18</div></a>
+        <a href="../index.html" ><div class="KR2">TECHKRANTHI 2K18</div></a>
       </div>
 		
       <nav id="nav-menu-container">
