--- a/vyuha.html
+++ b/vyuha.html
@@ -12,7 +12,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="../Symposium18/img/t.png">
+    <link rel="icon" href="../img/t.png">
     <!-- Custom fonts for this template -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -33,7 +33,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="../Symposium18/index.html"><span class="elect">TechKranthi '18</span></a>
+        <a class="navbar-brand js-scroll-trigger" href="../index.html"><span class="elect">TechKranthi '18</span></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -60,7 +60,7 @@
 
     <!-- Header -->
   
- <header class="masthead"  style="  background-image: url(../Symposium18/videos/back.gif)">
+ <header class="masthead"  style="  background-image: url(../videos/back.gif)">
       <div class="container">
         
          <div  class="animated slideInDown" id="sidelogo">
