--- a/vyuha.html
+++ b/vyuha.html
@@ -355,7 +355,7 @@
           <h3><center>        Workshop Fee</center></h3>
 <h5><ul>
 <li>Rs 350  (Without Kit)</li><br>
-<li>Rs 750  (With Kit)</li>
+<li>Rs 750  (additionally for the Kit)</li>
 </ul></h5>
 
                   <center><button class="btn btn-closer" data-dismiss="modal" type="button">
