--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ sansk {
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>Why you should clear your calendar on <div class="text-success">21st February 2018<div></h2>
-            <p class="lead mb-5">techKranthi has always proven to be the pinnacle of technical symposiums hosting a myriad of diverse events in various areas of interests that helps you establish a touchstone of your skill, and this year it's only bound to get bigger and better.   
+            <p class="lead mb-5">techKranthi has always proven to be the pinnacle of technical symposiums hosting a myriad of diverse events in various areas of interests that help you establish a touchstone of your skill, and this year it's only bound to get bigger and better.   
 
               <!--  Timer -->
              
