--- a/csit.html
+++ b/csit.html
@@ -608,7 +608,7 @@
 					<li>There will be two rounds, Preliminary and Finals Each 30 minutes</li>
 					<li>A theme will be given on the spot, based on which the app should be constructed</li>
 					<li>Preliminary Round will contain Multiple Choice Questions</li>
-					<li>Android Studio is provided as the Development Environment</li>
+					<li>Unity is provided as the Development Environment</li>
 				  </ul></p>
                   <ul class="list-inline">
                     <li>Venue: Computer Center 1 [Lab block I and II, Ground floor]</li>
