--- a/csit.html
+++ b/csit.html
@@ -312,7 +312,7 @@
               <img class="img-fluid" src="img/robotics.gif" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Workshop [Robotics]</h4>
+              <h4>Workshop Breathing Technology in your minds - Robotics</h4>
             </div>
 			<br>
           </div>
@@ -948,7 +948,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Workshop [Robotics]</h2>
+                  <h2 class="text-uppercase">Workshop Breathing Technology in your minds - Robotics</h2>
                   <p class="item-intro text-muted">"There are an endless number of things to discover about robotics. A lot of it is just too fantastic for people to believe"<br>--Daniel H. Wilson</p>
                   <img class="img-fluid d-block mx-auto" src="img/robotics.gif" alt="">
                   <center><button class="btn btn-primary" data-dismiss="modal" type="button">
