--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ document.getElementById("demo4").innerHTML = seconds + "s ";
   }
 }, 1000);
 </script>
-            <a class="btn btn-outline-danger btn-xl js-scroll-trigger" href="#events">Explore Events</a>
+            <a class="btn btn-outline-success btn-xl js-scroll-trigger" href="#events">Explore Events</a>
           </div>
         </div>
       </div>
