--- a/nobicom.html
+++ b/nobicom.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>NOBICOM 18'</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
