--- a/nobicom.html
+++ b/nobicom.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>NOBICOM 18'</title>
-  <meta name="viewport" content="width=device-width, maximum-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
