--- a/csit.html
+++ b/csit.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -58,7 +58,7 @@
     <header class="masthead animated bounce">
       <div class="container">
         <div class="intro-text">
-          <h3><i>Department of Computer Science <br> 	and <br/> Department of Information Technology <br> presents </i></h3><br><br>
+          <h3> Department of Computer Science and Department of Information Technology presents </h3>
           <b><div class="text-warning" style="font-size:10rem; color: black;
    -webkit-text-fill-color: warning; /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 1px;
