--- a/nobicom.html
+++ b/nobicom.html
@@ -32,8 +32,8 @@
   <section id="hero">
     <div class="hero-container">
       <div class="wow fadeIn">        
-		<div class="HV">DEPARTMENT OF ECE PRESENTS</div>           
-		<div class="KR1">NOBICOM '18</div>
+		<div class="HV">ECE</div>           
+		<div class="KR1">18</div>
 		<div class="actions">
           <a href="#testimonials" class="btn-get-started">EVENTS</a>
           <a href="https://docs.google.com/forms/d/1c-s-Iw367dz2j6GcuocNJNkvaGgiK95vSVScvIuj55M/" class="btn-services">REGISTER</a>
