--- a/csit.html
+++ b/csit.html
@@ -34,6 +34,9 @@
   </head>
 
   <body id="page-top">
+      
+      <div id="preloader"></div>
+       <div id="content">
     <a class="js-scroll-trigger" id="myBtn"  href="#page-top"><i class="fa fa-arrow-circle-up"></i></a>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -906,6 +909,7 @@
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
 <script>AOS.init();</script>
+        </div>
   </body>
 
 </html>
