--- a/mechsym.html
+++ b/mechsym.html
@@ -92,9 +92,9 @@ background-color:white;
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                <div class="animated tada infinite"><h1 class="ab">Department of Mechanical Engineering </h1></div>
 			   <h2 class="abc">Presents</h2>
-					<figure class="logo" >
+					<figure class="logo">
 					<img src="img/mech.png" title="Mechrevz" alt="Mechrevz'18" >
-					<figcaption class="sr-only "><div class="abcd"><b>M</b>echrevz'18</div></figcaption>
+					<figcaption class="sr-only "><div class="abcd"  style="font-size: 10vw"><b>M</b>echrevz'18</div></figcaption>
 				</figure>
         
                   </div>
