--- a/nobicom.html
+++ b/nobicom.html
@@ -32,8 +32,8 @@
   <section id="hero">
     <div class="hero-container">
       <div class="wow fadeIn">        
-		<div class="HV">DEPARTMENT OF ECE PRESENTS</div>           
-		<div class="KR1">NOBICOM '18</div>
+		<div class="HV" style="font-size:6vw">DEPARTMENT OF ECE PRESENTS</div>           
+		<div class="KR1" style="font-size:12vw">NOBICOM '18</div>
 		<div class="actions">
           <a href="#testimonials" class="btn-get-started">EVENTS</a>
           <a href="https://docs.google.com/forms/d/1c-s-Iw367dz2j6GcuocNJNkvaGgiK95vSVScvIuj55M/" class="btn-services">REGISTER</a>
@@ -46,7 +46,7 @@
     <div class="container">
 
       <div class="pull-left">
-        <a href="../index.html" ><div class="KR2">TECHKRANTHI 2K18</div></a>
+        <a href="../index.html" ><div class="KR2" style="font-size:3vw">TECHKRANTHI 2K18</div></a>
       </div>
 		
       <nav id="nav-menu-container">
