--- a/csit.html
+++ b/csit.html
@@ -298,7 +298,7 @@
                   <i class="fa fa-code fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/quiz.gif" alt="">
+              <img class="img-fluid" src="img/techquiz.gif" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Technical Quiz</h4>
@@ -313,7 +313,7 @@
                   <i class="fa fa-code fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/flappy1.gif" alt="">
+              <img class="img-fluid" src="img/game.gif" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Game Development</h4>
@@ -343,7 +343,7 @@
                   <i class="fa fa-code fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/connect.gif" alt="">
+              <img class="img-fluid" src="img/connect1.gif" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Connexome</h4>
