--- a/nobicom.html
+++ b/nobicom.html
@@ -79,7 +79,7 @@ background: linear-gradient(to left, #ACB6E5, #74ebd5);
             <div class="circle-img img-circle">
 			<img src="img/4i.gif"></div>
             <h4 style="font-size:30px">4I</h4>
-            <span style="font-size:20px "><b>Inspire, Ideate, Innovate & Implement</b></span>
+            <span style="font-size:20px "><b>Inspire, Idea, Innovate & Implement</b></span>
           </div>
         </div>
         <div class="col-md-9">
